@@ -160,6 +160,10 @@ proc do_attach_tests {} {
 	    # Response expected on Cygwin
 	    pass "$test"
 	}
+	-re "Attaching to.*, process $boguspid.*failed.*$gdb_prompt $" {
+	    # Response expected on the extended-remote target.
+	    pass "$test"
+	}
     }
     
     # Verify that we can attach to the process by first giving its
@@ -224,7 +228,8 @@ proc do_attach_tests {} {
     # Verify that we can attach to the process just by giving the
     # process ID.
    
-    set test "set file, before attach2"
+    set test "attach2, with no file"
+    set found_exec_file 0
     gdb_test_multiple "attach $testpid" "$test" {
 	-re "Attaching to process $testpid.*Load new symbol table from \"$escapedbinfile\.exe\".*y or n. $" {
 	    # On Cygwin, the DLL's symbol tables are loaded prior to the
@@ -233,9 +238,25 @@ proc do_attach_tests {} {
 	    # executable.
 	    gdb_test "y" "Reading symbols from $escapedbinfile\.\.\.*done." \
 		"$test (reset file)"
+
+	    set found_exec_file 1
 	}
 	-re "Attaching to process $testpid.*Reading symbols from $escapedbinfile.*main.*at .*$gdb_prompt $" {
 	    pass "$test"
+	    set found_exec_file 1
+	}
+    }
+
+    if {$found_exec_file == 0} {
+	set test "load file manually, after attach2"
+	gdb_test_multiple "file $binfile" "$test" {
+	    -re "A program is being debugged already..*Are you sure you want to change the file.*y or n. $" {
+		gdb_test "y" "Reading symbols from $escapedbinfile\.\.\.*done." \
+		    "$test (re-read)"
+	    }
+	    -re "Reading symbols from $escapedbinfile\.\.\.*done.*$gdb_prompt $" {
+		pass "$test"
+	    }
 	}
     }
 
